--- a/src/components/cards/Card.css
+++ b/src/components/cards/Card.css
@@ -25,7 +25,7 @@
 
 img {
     width: 100%;
-    height: 200px;
+    height: 100%;
     object-fit: contain;
 
     /* margin: 1rem; */
@@ -59,6 +59,7 @@ img {
     gap: 20px;
     justify-content: center;
     align-items: center;
+    
     
 }
 
